fixed layout problems

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -7,6 +7,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 @import "bootswatch";
 
 $footer-height: 24px;
+$header-height: 64px;
 
 /*body {
     background: #fafafa;
@@ -44,15 +45,7 @@ $footer-height: 24px;
     margin-right: auto;
 }
 
-.conversations {
-  border-right: 1px dashed #afafaf;
-  height: 100%;
-}
-
-#conversation-title {
-    border-style: none;
-}
-
+/**Can highlight rows in striped table.*/
 .table-striped tbody tr.active td {
     background-color: $table-bg-active;
 }
@@ -62,14 +55,59 @@ $footer-height: 24px;
     top: 64px;
 }*/
 
-.tasks {
-    position: absolute;
-    top: 200px;
-    bottom: $footer-height;
-    width: 100%;
+#wrapper {
+    min-height: 100%;
     height: 100%;
-    max-height: 100vh;
-    overflow-y: scroll;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    display: inline-block;
+}
+#main-wrapper {
+    height: 100%;
+    overflow-y: auto;
+    padding: $header-height 0 $footer-height 0;
+}
+#main {
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
+    padding: 0 15px;
+}
+#sidebar-wrapper {
+    height: 100%;
+    padding: $header-height 15px $footer-height 0;
+    position: fixed;
+    border-right: 1px dashed #afafaf;
+}
+#sidebar {
+    position: relative;
+    height: 100%;
+    overflow-y: auto;
+}
+@media (max-width: 992px) {
+    body {
+        padding-top: 0px;
+    }
+}
+@media (min-width: 992px) {
+    #main-wrapper {
+        float:right;
+    }
+}
+@media (max-width: 992px) {
+    #main-wrapper {
+        padding-top: 0px;
+    }
+}
+@media (max-width: 992px) {
+    #sidebar-wrapper {
+        position: static;
+        height:auto;
+        max-height: 300px;
+        border-right:0;
+    }
 }
 
 /* Sticky footer styles
@@ -79,13 +117,15 @@ $footer-height: 24px;
 html,
 body {
   height: 100%;
+  overflow: hidden;
   /* The html and body elements cannot have any padding or margin. */
 }
 
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
-  height: auto;
+/*  height: auto !important;*/
+  height: 100%;
   /* Negative indent footer by its height */
   margin: 0 auto (-$footer-height);
   /* Pad bottom by footer height */
